NEW IN VERSION 1.6

- Various compile warnings removed
- Documentation fixes
- Fix for spec file
- Fix readline-less build
- Fix argument checking for export command
- Add -u option to unlock a db that's been left locked
- Hitting ^C 4 times exits a wedged run (with data loss)
- Allow start of entry text to be used for indexing instead of just entry
  number.

NEW IN VERSION 1.5.2

- allow more than 5 digits for pid in creating name of lock file

NEW IN VERSION 1.5.1

- bug fix : string for forming lock file name was undersized by 1 byte

NEW IN VERSION 1.5

- bug fix : trying to move a node above/below/before/after itself corrupted the
  internal state
- add per-database dotlocking to prevent multiple processes accessing the same
  database.  (Can be disabled with --disable-dotlock option to configure).

NEW IN VERSION 1.4.2

- moveto command (alias for into command)
- bug fix

NEW IN VERSION 1.4.1

- Fix TDL_LIST_MONOCHROME
- Output without colours if stdout is not a terminal
- Install manpage compressed and create links from other shortcuts to it
- Don't include -g amongst default CFLAGS

NEW IN VERSION 1.4

- Add more intelligent configure script
- Support rl_completion_matches (replaces completion_matches in newer readline
  libraries)
- Add "defer" command
- Remove start-time editing from "edit" command
- Bug fix : bad path expression with postpone used to segfault
- Bug fix : completion always matched on 3 characters of command instead
  of per-command length (broke completion for 'ls')
- Copy permissions of old database to new database when saving
- Ask user for confirmation before acting on "quit" command

NEW IN VERSION 1.3.1

- Bug fix : widen without doing narrow first segfaults
- Spec file fix for mandir
- Updated manpage

NEW IN VERSION 1.3

- Added "save" command
- Added "delete", "ls" and "revert" commands.
- Added "narrow" and "widen" commands
- Improvements to tdl.spec (e.g. so that SRPM construction works properly).

NEW IN VERSION 1.2
