@@ -1,7 +1,20 @@
 #!/usr/bin/env perl
-unlink "build_kit";
 
-($version = $ARGV[0]) || ($version = "UNKNOWN");
+# Have to run it in the current directory
+if (($0 ne "build_kit") && ($0 ne "./build_kit")) {
+  die "Have to be in the checked-out directory to run build_kit";
+}
+
+$here=`pwd`;
+chomp $here;
+$version=$here;
+$version =~ s,^.*/tdl-([^/]+)$,$1, || die "Didn't recognize directory name";
+print "Building kit for version $version\n";
+
+# Overwrite normal version.h file with version-specific one
+open (OUT, ">version.txt");
+print OUT $version."\n";
+close OUT;
 
 open (IN, "<tdl.spec.sample");
 open (OUT, ">tdl.spec");
@@ -13,3 +26,11 @@ close (IN);
 close (OUT);
 
 unlink "tdl.spec.sample";
+unlink "build_kit";
+system ("rm -rf ./{arch}");
+system ("rm -rf ./.arch-ids");
+
+chdir ("..");
+system ("tar cvf - tdl-$version | gzip -9 > tdl-$version.tar.gz");
+system ("gpg -b -a -o tdl-$version-tar-gz-asc.txt tdl-$version.tar.gz");
+
